# Proyecto-Operativos-2

./: CMakeLists.txt  README.md  READMEA.md  ReadMe.md  cowfs.cpp  cowfs.disk  cowfs.hpp  cowfs_metadata.cpp  cowfs_metadata.cpp~  cowfs_metadata.hpp  cowfs_utils.cpp  cowfs_utils.hpp  documentation.md  example.cpp  informe.md  main.cpp  metadata.json  metadata_initial.json  metadata_v1.json  metadata_v2.json  test_all.cpp  test_cowfs.cpp  test_cowfs_incremental.cpp  test_metadata.cpp
Proyecto-Operativos-2-main/: CMakeLists.txt  README.md  cowfs.hpp  metadata_final.json
